--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
+        <activity android:name=".Chat"> </activity>
+        <activity android:name=".NewChat"> </activity>
     </application>
 
 </manifest>
