--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -23,9 +23,20 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.volley:volley:1.1.0'
     implementation 'org.java-websocket:Java-WebSocket:1.3.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+
+    // RxJava support for Room
+    implementation "android.arch.persistence.room:rxjava2:$roomVersion"
+
+    // Guava support for Room, including Optional and ListenableFuture
+    implementation "android.arch.persistence.room:guava:$roomVersion"
+
+    // Test helpers
+    testImplementation "android.arch.persistence.room:testing:$roomVersion"
 }
