--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "crypto": "^1.0.1",
     "element-ui": "^2.13.0",
     "vue": "^2.6.10",
-    "vue-cookies": "^1.6.1"
+    "vue-cookies": "^1.6.1",
+    "vue-cryptojs": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
