--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.13.0",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
-    "vue-cryptojs": "^2.1.3"
+    "vue-cryptojs": "^2.1.3",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
