test DH key generation on Java

--- a/JavaWeb3/pom.xml
+++ b/JavaWeb3/pom.xml
@@ -40,7 +40,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.47</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
